--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.5",
     "@gsap/react": "^2.1.0",
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
