--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
+    "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
     "react-masonry-css": "^1.0.16",
     "react-medium-image-zoom": "^5.1.10",
