--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-masonry-css": "^1.0.16",
     "react-medium-image-zoom": "^5.1.10",
     "react-redux": "^9.1.0",
+    "react-slick": "^0.30.2",
     "sass": "^1.70.0",
+    "slick-carousel": "^1.8.1",
     "split-type": "^0.3.4",
     "yarn": "^1.22.21"
   },
@@ -38,6 +40,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
