--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "add": "^2.0.6",
     "aos": "^3.0.0-beta.6",
-    "axios": "^1.6.7",
+    "axios": "^1.6.8",
     "framer-motion": "^11.0.5",
     "gsap": "^3.12.5",
     "heroicons": "^2.1.3",
@@ -30,6 +30,9 @@
     "react-medium-image-zoom": "^5.1.10",
     "react-redux": "^9.1.0",
     "react-slick": "^0.30.2",
+    "redux": "^5.0.1",
+    "redux-saga": "^1.3.0",
+    "redux-thunk": "^3.1.0",
     "sass": "^1.70.0",
     "slick-carousel": "^1.8.1",
     "split-type": "^0.3.4",
