--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "add": "^2.0.6",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.6.8",
+    "cors": "^2.8.5",
     "framer-motion": "^11.0.5",
     "gsap": "^3.12.5",
     "heroicons": "^2.1.3",
@@ -36,6 +37,7 @@
     "sass": "^1.70.0",
     "slick-carousel": "^1.8.1",
     "split-type": "^0.3.4",
+    "sweetalert2": "^11.10.7",
     "yarn": "^1.22.21"
   },
   "devDependencies": {
