--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.0.5",
     "gsap": "^3.12.5",
     "heroicons": "^2.1.3",
     "next": "14.1.0",
     "next-pwa": "^5.6.0",
+    "next-router-mock": "^0.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
@@ -29,6 +31,7 @@
     "react-icons": "^5.0.1",
     "react-masonry-css": "^1.0.16",
     "react-medium-image-zoom": "^5.1.10",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.1.0",
     "react-slick": "^0.30.2",
     "redux": "^5.0.1",
@@ -45,6 +48,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.16.3",
     "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
